[package]
name = "solana-pump-bot"
version = "0.1.0"
edition = "2021"
description = "A Solana bot for interacting with pump.fun"
repository = "https://github.com/yourusername/solana-pump-bot"
license = "MIT"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
solana-sdk = "1.18.20"
solana-client = "1.18.20"
solana-program = "1.18.20"
spl-token = "4.0.0"
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }
spl-associated-token-account = "2.2.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
dotenv = "0.15.0"
bs58 = "0.5"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"

[[bin]]
name = "pumpfun-bot"
path = "src/bin/pumpfun-bot.rs"
